Added Helvetica as fail safe font for font-ambit class

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -10252,7 +10252,7 @@ div.banner-title .banner-text {
 }
 
 .font-ambit {
-  font-family: Ambit, Tahoma, SansSerif;
+  font-family: Ambit, Tahoma, Helvetica, SansSerif;
 }
 
 #title {
