--- a/static/css/light.css
+++ b/static/css/light.css
@@ -10252,7 +10252,7 @@ div.banner-title .banner-text {
 }
 
 .font-ambit {
-  font-family: Ambit, Tahoma, SansSerif;
+  font-family: Ambit, Tahoma, Helvetica, SansSerif;
 }
 
 #title {
