--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}404{% endblock %}
+{% block title %}Keeb&Code | 404 Error{% endblock %}
 
 {% block content %}
-<h1>This is a custom 404 Page</h1>
+<h1>404 Error :(</h1>
+<h2 class="title">It seems that an error occured, the developer has been notified !</h2>
 {% endblock %}
