Added rounded corners to about page banner picture

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -7,7 +7,7 @@
 
 <br>
 <div class="about-banner">
-    <img src="{% static 'images/about-banner.png' %}" alt="" class="banner-large">
+    <img src="{% static 'images/about-banner.png' %}" alt="" class="banner-large rounded">
 </div>
 
 <p class="p-dark">
