Added meta tags to all pages templates

--- a/pages/templates/feed.html
+++ b/pages/templates/feed.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="tech blog">
 <meta name="author" content="Ivan Raymond">
 <meta property='og:title' content='Keeb&Code | Blog'/>
-<meta property='og:image' content='{% static 'images/logo-share.svg' %}'/>
+<meta property='og:image' content='{% static 'images/logo-share.png' %}'/>
 <meta property='og:description' content='Keeb&Code is a blog focused on programming, keyboards and tech.'/>
 <meta property='og:url' content='{{ request.get_full_path }}'/>
 <meta property="og:type" content="website" />
