--- a/posts/templates/post_category.html
+++ b/posts/templates/post_category.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 
+{% block head %}
+<meta name="description" content="Keeb&Code is a blog focused on programming, keyboards and tech.">
+<meta name="keywords" content="tech blog">
+<meta name="author" content="Ivan Raymond">
+<meta property='og:title' content='Keeb&Code | Blog'/>
+<meta property='og:image' content='{% static 'images/logo-share.png' %}'/>
+<meta property='og:description' content='Keeb&Code is a blog focused on programming, keyboards and tech.'/>
+<meta property='og:url' content='{{ request.get_full_path }}'/>
+<meta property="og:type" content="website" />
+{% endblock %}
+
 {% block title %}Keeb&Code | {{ category }}{% endblock %}
 
 {% block content %}
