Added load static to contact page

--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block head %}
 <meta name="description" content="Keeb&Code is a blog focused on programming, keyboards and tech.">
