--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <meta charset="utf-8">
         {% block head %}{% endblock %}
         <title>{% block title %}{% endblock %}</title>
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
         <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel='stylesheet' href="{% static 'css/light.css' %}">
