Replacing video with gif on feed

--- a/pages/templates/feed.html
+++ b/pages/templates/feed.html
@@ -16,8 +16,9 @@
 
 {% block content %}
 <div class="render-container">
-  <video class="feed-render" muted autoplay loop src="{% static 'video/pc.mp4' %}" poster="{% static 'images/pc.svg' %}"></video>
-  <video class="feed-render display-hidden" muted autoplay loop src="{% static 'video/pc-dark.mp4' %}" poster="{% static 'images/pc.svg' %}"></video>
+{#  <video class="feed-render" muted autoplay loop src="{% static 'video/pc.mp4' %}" poster="{% static 'images/pc.svg' %}"></video>#}
+    <img src="images/pc.gif" alt="Animated render of commodore 64 pc.">
+
 </div>
 
 <h2 class="blue-gradient">Recent Posts</h2>
