Added static tags

--- a/pages/templates/feed.html
+++ b/pages/templates/feed.html
@@ -17,7 +17,7 @@
 {% block content %}
 <div class="render-container">
 {#  <video class="feed-render" muted autoplay loop src="{% static 'video/pc.mp4' %}" poster="{% static 'images/pc.svg' %}"></video>#}
-    <img src="images/pc.gif" alt="Animated render of commodore 64 pc.">
+    <img src="{% static 'images/pc.gif' %}" alt="Animated render of commodore 64 pc.">
 
 </div>
 
