Trying compressed video

--- a/pages/templates/feed.html
+++ b/pages/templates/feed.html
@@ -16,9 +16,7 @@
 
 {% block content %}
 <div class="render-container">
-{#  <video class="feed-render" muted autoplay loop src="{% static 'video/pc.mp4' %}" poster="{% static 'images/pc.svg' %}"></video>#}
-    <img class="feed-render" src="{% static 'images/pc.gif' %}" alt="Animated render of commodore 64 pc.">
-
+  <video class="feed-render" muted autoplay loop src="{% static 'video/pc.mp4' %}" poster="{% static 'images/pc.svg' %}"></video>
 </div>
 
 <h2 class="blue-gradient">Recent Posts</h2>
