--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -88,31 +88,31 @@ body {
   -webkit-animation: mover 2s infinite  alternate;
   animation: mover 2s infinite  alternate;
   height: 240px;
-  width: auto;
+  width: 100%;
 
   @media #{$mq-xsmall} {
     height: 340px;
-    width: auto;
+    width: 100%;
   }
 
   @media #{$mq-small} {
     height: 440px;
-    width: auto;
+    width: 100%;
   }
 
   @media #{$mq-medium} {
     height: 540px;
-    width: auto;
+    width: 100%;
   }
 
   @media #{$mq-large} {
     height: 640px;
-    width: auto;
+    width: 100%;
   }
 
   @media #{$mq-xlarge} {
     height: 1080px;
-    width: auto;
+    width: 100%;
   }
 }
 
